`Update admin-upload.html and netlify.toml for Cloudinary upload widget and gallery update functionality`

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
   functions = "functions"
 
 [[redirects]]
-  from = "/admin-upload"
-  to = "/admin-upload.html"
+  from = "/update-gallery"
+  to = "/.netlify/functions/update-gallery"
   status = 200
