`Update admin-upload.html and functions/update-gallery.js for Cloudinary upload and gallery update functionality`

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,7 @@
   from = "/update-gallery"
   to = "/.netlify/functions/update-gallery"
   status = 200
+  force = true
+
+[functions]
+  node_bundler = "esbuild"
