--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,11 @@
   functions = "functions"
 
 [[redirects]]
-  from = "/update-gallery"
-  to = "/.netlify/functions/update-gallery"
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
   status = 200
   force = true
 
 [functions]
   node_bundler = "esbuild"
+  external_node_modules = ["@netlify/functions"]
