--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "php": "^1.0.2",
     "bcryptjs": "^2.4.3",
-    "aws-sdk": "^2.1584.0"
+    "aws-sdk": "^2.1584.0",
+    "@netlify/functions": "^2.6.0"
   }
 }
