--- a/netlify.toml
+++ b/netlify.toml
@@ -2,11 +2,10 @@
   functions = "functions"
 
 [[redirects]]
-  from = "/api/update-gallery"
+  from = "/.netlify/functions/update-gallery"
   to = "/.netlify/functions/update-gallery"
   status = 200
   force = true
-  methods = ["POST", "OPTIONS"]
 
 [functions]
   node_bundler = "esbuild"
