--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "php": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "aws-sdk": "^2.1584.0",
-    "@netlify/functions": "^2.6.0"
+    "@netlify/functions": "^2.6.0",
+    "@octokit/rest": "^18.12.0"
   }
 }
