--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,11 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
     { "handle": "filesystem" }
-  ]
+  ],
+
+  "env": {
+    "GITHUB_TOKEN": "@github_token",
+    "GITHUB_OWNER": "@github_owner",
+    "GITHUB_REPO": "@github_repo"
+  }
 }
