--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 GITHUB_TOKEN=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
 GITHUB_OWNER=Shirozuu
 GITHUB_REPO=Web
+VERCEL_TOKEN=fEYkA3YPsiYXQOAldRJ5iSN9
+VERCEL_TEAM_ID=team_2PbYA7kryR0ii8Nomsij1toF
+VERCEL_PROJECT_ID=prj_CFcmA4NCA3zjkjK4u0OBedzuvj9b
+VERCEL_PROJECT_NAME=Web
