--- a/vercel.json
+++ b/vercel.json
@@ -17,13 +17,9 @@
     }
   ],
   "env": {
-    "GITHUB_TOKEN": "${GITHUB_TOKEN}",
-    "GITHUB_OWNER": "${GITHUB_OWNER}",
-    "GITHUB_REPO": "${GITHUB_REPO}", 
-    "VERCEL_TOKEN": "${VERCEL_TOKEN}",
-    "VERCEL_TEAM_ID": "${VERCEL_TEAM_ID}",
-    "VERCEL_PROJECT_ID": "${VERCEL_PROJECT_ID}",
-    "VERCEL_PROJECT_NAME": "${VERCEL_PROJECT_NAME}"
+    "GITHUB_TOKEN": "@github_token",
+    "GITHUB_OWNER": "@github_owner",
+    "GITHUB_REPO": "@github_repo"
   },
   "git": {
     "deploymentEnabled": {
